packages/design-system/src/components/MultiSelectField/style.scss
@import '../../scss/variables/colors';

$base-class: 'multiselect';

.#{$base-class} {
  position: relative;
  width: inherit;
  color: $font-primary-color;

  &-head {
    position: relative;
    border: 1px solid $border-primary-color;
    border-radius: 4px;
    background-color: #fff;
    cursor: pointer;
    display: flex;
    align-items: center;
    padding: 4px 3px;
    outline: 0;
    transition: border 0.15s ease-in-out;

    &:hover {
      border-color: $field-hover-border-color;
      transition: border 0.15s ease-in-out;
    }

    &--focused {
      border-color: $primary-color;
      transition: border 0.15s ease-in-out;

      &:hover {
        border-color: $primary-color;
        transition: border 0.15s ease-in-out;
      }
    }
  }

  &-head__clear {
    opacity: 0;
    visibility: hidden;
    display: flex;
    transition: all 0.15s ease-in-out;

    &--visible {
      opacity: 1;
      visibility: visible;
      transition: all 0.15s ease-in-out;
    }
  }

  &-head__search {
    display: block;
    width: 5px;
    margin: 2px 3px;
    font-size: 16px;
    line-height: 28px;
    color: $font-primary-color;
    border: none;
    background-color: transparent;
    box-sizing: border-box;
    outline: none;

    ::placeholder,
    ::-webkit-input-placeholder,
    ::-moz-placeholder,
    :-moz-placeholder,
    :-ms-input-placeholder,
    ::-ms-input-placeholder {
      opacity: 0.4;
      color: $font-primary-color;
    }

    &:focus,
    &:active,
    &:hover {
      outline: none;

      .#{$base-class}-head {
        border: 1px solid $primary-color;
      }
    }

    &--expanded {
      width: auto;
    }
  }

  &-body {
    position: absolute;
    top: 100%;
    width: 100%;
    margin-top: 2px;
    background-color: #fff;
    box-sizing: border-box;
    border-radius: 4px;
    box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.2);
    opacity: 0;
    visibility: hidden;
    transform: translateY(-10%);
    transform-origin: top center;
    transition: all 0.15s ease-in-out;
    overflow: hidden;
    z-index: 100000;
    padding: 14px 0;

    &--visible {
      opacity: 1;
      visibility: visible;
      transform: translateY(0);
      transition: all 0.15s ease-in-out;
    }

    &__list {
      max-height: 224px;
      margin: 0;
      padding: 0;
      overflow-x: hidden;
      overflow-y: auto;
    }

    &__item {
      position: relative;
      list-style: none;
      cursor: pointer;
      display: flex;
      padding: 8px 10px;
      align-items: center;

      &-content {
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
        max-width: calc(100% - 20px);
        width: 100%;
      }

      &--selected {
        color: $primary-color;

        .#{$base-class}-body__checkmark {
          opacity: 1;
          visibility: visible;
          transition: all 0.15s ease-in-out;
        }
      }

      &--focused {
        background-color: $hover-background-color;
      }

      &--toggle {
        border-bottom: 1px solid $divider-color;
      }
    }
  }

  &-body__checkmark {
    opacity: 0;
    visibility: hidden;
    transition: all 0.15s ease-in-out;
    fill: $primary-color;
    margin-left: auto;
    padding-left: 5px;
  }

  &-head__items {
    height: 100%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    overflow-y: auto;
    margin: 0;
    flex: 1;
    opacity: 1;
    visibility: visible;
  }

  &__placeholder {
    margin: 2px 3px;
    font-size: 15px;
    line-height: 28px;
    opacity: 0.4;
    color: $font-primary-color;
  }

  &-head__item {
    background-color: #59699e;
    min-width: auto;
    color: #fff;
    position: relative;
    margin: 2px 3px;
    border-radius: 5px;
    padding: 6px 10px;
    cursor: default;
    overflow: hidden;
    font-size: 14px;
    display: flex;
    align-items: center;

    &-content {
      width: calc(100% - 22px);
      flex-grow: 1;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }

    &-remove-icon {
      opacity: 0.5;
      margin-right: 8px;
      cursor: pointer;
    }
  }

  &__dropdown-icon {
    align-self: flex-start;
    margin-top: 5px;
  }

  &--error {
    .#{$base-class}-head {
      border-color: $error-color;
    }
  }
}

